Mon Aug 04 06:34:56 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update with latest branchpoints.

Sun Aug 03 20:39:26 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_speed.py: Add another test case - this
	  checks that some searches which should return the same values do
	  so.  More usefully, parts can be commented out to display the
	  speed of the various kinds of range searches.

Sun Aug 03 20:38:54 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_accel.py: Some formatting fixes.

Sun Aug 03 12:10:42 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Update copyright date, and mention Paul Rudin.
	* docs/queries.rst: Make clear that approximate range terms can be
	  used to speed up exact range searches.

Sun Aug 03 11:57:37 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,xappy/searchconnection.py,
	  xappy/unittests/range_accel.py: Add "range acceleration" terms,
	  to allow approximate ranges to be stored in documents.  This
	  allows fast, but approximate, range searches to be performed, and
	  also allows such a search to be combined with an exact range
	  search to speed up the range search.
	* docs/queries.rst: Document the approximate range queries.

Sun Aug 03 11:26:32 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* test.py: Add some more useful facilities to the environment that
	  doctests are run in.

Sun Aug 03 11:25:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/weight_action.py: Make the comment on
	  test_regression() more explanatory.

Tue Jul 29 23:09:16 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: For INDEX_EXACT, TAG and FACET term
	  queries, multiply the weight by 0 to tell xapian that the weight
	  is always zero, and allow better optimisation.