@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10871.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-11060.tgz',
      'xapian-core.tgz',
-     '741b4f1b300024f74682417d59a19956697614d4',
+     '1a075969e49d9f3a484711f7a5ff632095cc169c',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10871.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-11060.tgz',
      'xapian-bindings.tgz',
-     '30753c2a603560f6b0c3caf754782fa68f6f30c5',
+     '0279746901795c089e503f8aa64669bccc92d09b',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10871.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-11060.tgz',
      'win32msvc.tgz',
-     '79ef8b4cc67029c7fb346214dc61482254989d1e',
+     '9ce9b8f656bafcfe02d283df4e88de5e8320a106',
      'xapian-core/win32',
     ),
 )
