@@ -1,3 +1,7 @@
+Mon Aug 04 07:26:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Update with details of new xapian packages.
+
 Mon Aug 04 06:34:56 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/make_xappy_tarballs: Update with latest branchpoints.
